--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ nav {
 header {
   height: 175px;
   width: 100%;
-  background-image: url("../src/assets/background-image.png");
+
+  background-image: url("../public/assets/background-image.png");
   background-size: cover;
   background-position: center;
 }
@@ -117,7 +118,7 @@ li.footerlink {
 }
 
 /* Re-size for devices*/
-/*@media screen and (max-width: 768px) {
+/*@media only screen and (max-width: 768px) {
   Use flex-direction to stack the navbar, body and footer
   main,
   nav,
