--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   background-color: whitesmoke;
 }
+
 nav {
   background-color: rgb(50, 52, 60);
   display: flex;
@@ -17,22 +18,30 @@ nav {
 header {
   height: 175px;
   width: 100%;
-
   background-image: url("../public/assets/background-image.png");
   background-size: cover;
   background-position: center;
 }
+ul.navlist {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 li.navigationlist {
   display: inline;
-  padding: 0px 20px;
+  margin: 0 10px;
+  /*padding: 0px 20px;*/
   text-decoration: underline;
   line-height: 100px;
-  font-size: 24px;
+  /*font-size: 24px;*/
   color: rgb(159, 202, 204);
-  padding-inline-end: 50px;
+  /*padding-inline-end: 50px;*/
+  justify-content: flex-end;
 }
-/* unvisited link */
-a:link {
+li.navigationlist a {
+  display: block;
+  padding: 10px;
   color: rgb(159, 202, 204);
   text-decoration: none;
 }
@@ -57,7 +66,7 @@ a:active {
   color: rgb(50, 52, 60);
   border: 5px rgb(159, 202, 204);
   line-height: 100px;
-  font-size: 36px;
+
   margin: 15px;
   height: 75%;
   background-color: rgb(159, 202, 204);
@@ -114,26 +123,30 @@ li.footerlink {
   margin-top: 10px;
   text-decoration: none;
   line-height: 100px;
-  font-size: 26px;
+  /*font-size: 26px;*/
 }
 
 /* Re-size for devices*/
-/*@media only screen and (max-width: 768px) {
-  Use flex-direction to stack the navbar, body and footer
-  main,
-  nav,
-  footer {
-    flex-direction: column;
-  }
-  /* Make the sidebar stack below the body 
-  aside {
-    order: 2;
-  }
-  /* Change the header background
+@media only screen and (max-width: 480px) {
   nav {
-    background: rgb(50, 52, 60);
+    width: fit-content;
   }
-  /* Change the navbar and footer background
-    background-color: whitesmoke;
+  /* styles for mobile browsers smaller than 480px; (iPhone) */
+  li.navigationlist {
+    display: inline;
+    margin: 0 10px;
+    line-height: 0px;
+    /*padding: 0px 20px;*/
+    text-decoration: underline;
+    /*line-height: 100px;*/
+    /*font-size: 24px;*/
+    color: rgb(159, 202, 204);
+    /*padding-inline-end: 50px;*/
+    /*justify-content: flex-end;*/
   }
-}*/
+  li.navigationlist a {
+    display: block;
+    padding: 10px;
+    background-color: rgb(50, 52, 60);
+  }
+}
