--- a/src/index.css
+++ b/src/index.css
@@ -113,25 +113,35 @@ footer {
   width: 100%;
   height: 100%;
   background-color: cornflowerblue;
-  padding: 5px;
+
   justify-content: center;
+}
+ul.footerlink {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 li.footerlink {
   display: inline;
-  padding-top: 20px;
-  margin-top: 10px;
+  /*padding-top: 20px;
+  margin-top: 10px;*/
   text-decoration: none;
   line-height: 100px;
   /*font-size: 26px;*/
 }
 
 /* Re-size for devices*/
+/* styles for mobile browsers smaller than 480px; (iPhone) */
+
 @media only screen and (max-width: 480px) {
   nav {
     width: fit-content;
   }
-  /* styles for mobile browsers smaller than 480px; (iPhone) */
+  header {
+    object-fit: fill;
+  }
   li.navigationlist {
     display: inline;
     margin: 0 10px;
@@ -148,5 +158,24 @@ li.footerlink {
     display: block;
     padding: 10px;
     background-color: rgb(50, 52, 60);
+  }
+
+  footer {
+    width: 100%;
+  }
+  ul.footerlink {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li.footerlink {
+    display: inline;
+    /*padding-top: 20px;
+    margin-top: 10px;*/
+    text-decoration: none;
+    /*line-height: 100px;*/
+    /*font-size: 26px;*/
   }
 }
